# src/main/resources/openapi/documentation.yaml
@@ -51,7 +51,7 @@ paths:
         required: false
         schema:
           type: "string"
-      - name: "vendor"
+      - name: "distribution"
         in: "query"
         required: false
         schema:
@@ -84,7 +84,7 @@ paths:
         required: false
         schema:
           type: "string"
-      - name: "vendor"
+      - name: "distribution"
         in: "query"
         required: false
         schema:
@@ -117,7 +117,7 @@ components:
           type: "string"
         version:
           type: "string"
-        vendor:
+        distribution:
           type: "string"
         platform:
           type: "string"
@@ -134,7 +134,7 @@ components:
       required:
       - "candidate"
       - "version"
-      - "vendor"
+      - "distribution"
       - "platform"
     Version:
       type: "object"
@@ -143,7 +143,7 @@ components:
           type: "string"
         version:
           type: "string"
-        vendor:
+        distribution:
           type: "string"
         platform:
           type: "string"
@@ -170,7 +170,7 @@ components:
       required:
       - "candidate"
       - "version"
-      - "vendor"
+      - "distribution"
       - "platform"
       - "url"
       - "visible"
